llvm/test/tools/llubi/inttoptr_oob.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  %alloc = alloca i32
  %int = ptrtoint ptr %alloc to i64
  %ptr = inttoptr i64 %int to ptr

  %ptr_oob = getelementptr i8, ptr %ptr, i64 5
  %ptr_inbounds_resolved = getelementptr inbounds i8, ptr %ptr, i64 4
  %ptr_inbounds_oob = getelementptr inbounds i8, ptr %ptr, i64 5

  ; We cannot resolve to any exposed provenance.
  store i64 0, ptr %ptr_oob

  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   %int = ptrtoint ptr %alloc to i64 => i64 8
; CHECK-NEXT:   %ptr = inttoptr i64 %int to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   %ptr_oob = getelementptr i8, ptr %ptr, i64 5 => ptr 0xD [wildcard]
; CHECK-NEXT:   %ptr_inbounds_resolved = getelementptr inbounds i8, ptr %ptr, i64 4 => ptr 0xC [alloc + 4]
; CHECK-NEXT:   %ptr_inbounds_oob = getelementptr inbounds i8, ptr %ptr, i64 5 => poison
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i64 0, ptr %ptr_oob, align 4 at @main <stdin>:16
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
